--- a/package.json
+++ b/package.json
@@ -13,19 +13,17 @@
     "@prisma/client": "^5.2.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tiptap/extension-color": "^2.1.6",
-    "@tiptap/extension-list-item": "^2.1.6",
-    "@tiptap/pm": "^2.1.6",
-    "@tiptap/react": "^2.1.6",
-    "@tiptap/starter-kit": "^2.1.6",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "html-react-parser": "^4.2.1",
     "lucide-react": "^0.268.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
@@ -40,6 +38,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "prisma": "^5.2.0"
   }
 }
