--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
-    "html-react-parser": "^4.2.1",
     "lucide-react": "^0.268.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
@@ -31,6 +30,7 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-html-parser": "^2.0.2",
     "sass": "^1.66.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
