adding lot of stuff

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,10 +27,13 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/editor/page.jsx",
-    "src/lib/provider.js",
+    "src/app/admin/editor/page.tsx",
+    "src/lib/provider.ts",
     "src/app/blog/page.jsx",
-    "src/components/ArticleList.jsx"
+    "src/components/ArticleList.jsx",
+    "src/app/api/article/route.ts",
+    "src/app/admin/layout.tsx",
+    "src/components/LoginButton.jsx"
   ],
   "exclude": ["node_modules"]
 }
