--- a/package.json
+++ b/package.json
@@ -32,16 +32,19 @@
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
+    "hamburger-react": "^2.5.0",
     "html-react-parser": "^4.2.1",
     "lucide-react": "^0.268.0",
-    "next": "13.4.19",
+    "next": "^13.5.6",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.28",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-use": "^17.4.0",
     "sass": "^1.66.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
